--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -344,19 +344,18 @@ jobs:
           operator-sdk cleanup mondoo-operator --namespace mondoo-operator
           operator-sdk olm uninstall
 
+      - uses: actions/upload-artifact@v4  # upload test results
+        if: success() || failure()        # run this step even if previous step failed
+        with:                             # upload a combined archive with unit and integration test results
+          name: test-results-olm-${{ matrix.k8s-version }}
+          path: integration-tests-olm-${{ matrix.k8s-version }}.xml
+
       - name: Upload test logs artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         if: failure()
         with:
           name: olm-test-logs-${{ matrix.k8s-version }}
           path: /home/runner/work/mondoo-operator/mondoo-operator/tests/integration/_output/
-
-      - uses: dorny/test-reporter@v1
-        if: failure() || success()
-        with:
-          name: Report OLM test results
-          path: '*.xml'                     # Path to test results
-          reporter: java-junit              # Format of test results
 
   # publish kubectl manifests
   run-release-manifests:
@@ -431,19 +430,44 @@ jobs:
           MONDOO_API_TOKEN: ${{ secrets.MONDOO_TEST_ORG_TOKEN }}
         run: EXTERNAL_INSTALLATION=1 VERSION=${{ steps.meta.outputs.version }} make test/integration/ci
 
+      - uses: actions/upload-artifact@v4  # upload test results
+        if: success() || failure()        # run this step even if previous step failed
+        with:                             # upload a combined archive with unit and integration test results
+          name: test-results-helm-${{ matrix.k8s-version }}
+          path: integration-tests-helm-${{ matrix.k8s-version }}.xml
+
       - name: Upload test logs artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         if: failure()
         with:
           name: helm-test-logs-${{ matrix.k8s-version }}
           path: /home/runner/work/mondoo-operator/mondoo-operator/tests/integration/_output/
 
-      - uses: dorny/test-reporter@v1
-        if: failure() || success()
+  report-tests:
+    name: Report test results
+    runs-on: ubuntu-latest
+    needs:
+      - run-olm-e2e
+      - run-helm-tests
+    permissions:
+      actions: read        # Required to read the artifact
+      contents: read       # Required to read the source
+      checks: write        # Required to write the results
+      pull-requests: write # Required to write comments
+    steps:
+      - name: Download test results
+        uses: actions/download-artifact@v4
         with:
-          name: Report Helm test results
-          path: '*.xml'                     # Path to test results
-          reporter: java-junit              # Format of test results
+          pattern: test-results-*
+          merge-multiple: true
+
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        with:
+          commit: ${{ github.event.workflow_run.head_sha }}
+          event_file: ${{ github.event_path }}
+          event_name: ${{ github.event.workflow_run.event }}
+          files: "artifacts/**/*.xml"
 
   release-helm:
     name: Release helm chart
