--- a/.github/workflows/test-report.yaml
+++ b/.github/workflows/test-report.yaml
@@ -6,11 +6,23 @@ on:
       - completed
 jobs:
   report:
+    permissions:
+      actions: read        # Required to read the artifact
+      contents: read       # Required to read the source
+      checks: write        # Required to write the results
+      pull-requests: write # Required to write comments
     runs-on: ubuntu-latest
     steps:
-    - uses: dorny/test-reporter@v1
+    - name: Download and Extract Artifacts
+      uses: dawidd6/action-download-artifact@v3
       with:
-        artifact: test-results
-        name: Report test results
-        path: '*.xml'                     # Path to test results (inside artifact .zip)
-        reporter: java-junit              # Format of test results
+        run_id: ${{ github.event.workflow_run.id }}
+        name: test-results-*
+
+    - name: Publish Test Results
+      uses: EnricoMi/publish-unit-test-result-action@v2
+      with:
+        commit: ${{ github.event.workflow_run.head_sha }}
+        event_file: artifacts/Event File/event.json
+        event_name: ${{ github.event.workflow_run.event }}
+        files: "artifacts/**/*.xml"
