--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -43,6 +43,15 @@ spec:
         args:
         - operator
         - --leader-elect
+        env:
+        - name: POD_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.name
+        - name: POD_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
         image: controller:latest
         imagePullPolicy: IfNotPresent
         name: manager
