--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -24,9 +24,9 @@ jobs:
           cache: true
       
       - run: make test/ci
-      - uses: actions/upload-artifact@v3  # upload test results
+      - uses: actions/upload-artifact@v4  # upload test results
         if: success() || failure()        # run this step even if previous step failed
         with:
-          name: test-results
+          name: test-results-unit
           path: unit-tests.xml
    
