--- a/.github/workflows/test-report.yaml
+++ b/.github/workflows/test-report.yaml
@@ -17,7 +17,8 @@ jobs:
       uses: dawidd6/action-download-artifact@v3
       with:
         run_id: ${{ github.event.workflow_run.id }}
-        name: test-results-*
+        name: "^test-results-.*"
+        name_is_regexp: true
 
     - name: Publish Test Results
       uses: EnricoMi/publish-unit-test-result-action@v2
