--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -13,6 +13,15 @@ permissions:
   contents: read
 
 jobs:
+  event_file:
+    name: "Store event file"
+    runs-on: ubuntu-latest
+    steps:
+    - name: Upload
+      uses: actions/upload-artifact@v4
+      with:
+        name: Event File
+        path: ${{ github.event_path }}
   unit-tests:
     if: |
       !github.event.pull_request.head.repo.fork && github.actor != 'dependabot[bot]'
