--- a/.github/workflows/cloud-tests.yaml
+++ b/.github/workflows/cloud-tests.yaml
@@ -303,7 +303,7 @@ jobs:
         commit: ${{ github.event.workflow_run.head_sha }}
         event_file: ${{ github.event_path }}
         event_name: ${{ github.event.workflow_run.event }}
-        files: "artifacts/**/*.xml"
+        files: "*.xml"
 
   discord-notification:
     runs-on: ubuntu-latest
