extend the timeout for the validating webhook
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -32,3 +32,5 @@ webhooks:
     - jobs
     - cronjobs
   sideEffects: None
+  # The default is 10s but on slow clusters we may take longer
+  timeout: 20s
