--- a/controllers/admission/webhook-manifests.yaml
+++ b/controllers/admission/webhook-manifests.yaml
@@ -31,3 +31,5 @@ webhooks:
     - jobs
     - cronjobs
   sideEffects: None
+  # The default is 10s but on slow clusters we may take longer
+  timeout: 20s
