--- a/config/webhook/kustomization.yaml
+++ b/config/webhook/kustomization.yaml
@@ -11,3 +11,6 @@ images:
 - name: controller
   newName: ghcr.io/mondoohq/mondoo-operator
   newTag: v1.21.0
+
+patchesStrategicMerge:
+- webhook_patch.yaml
