--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -7,6 +7,8 @@ on:
     branches:
       - "main"
     tags: ["v*.*.*"]
+  schedule:
+    - cron: '0 4 * * 3' # Every Wednesday at 4:00 AM
 
 # https://docs.github.com/en/actions/security-guides/automatic-token-authentication#permissions-for-the-github_token
 permissions:
