--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -275,8 +275,9 @@ spec:
                     type: string
                   style:
                     default: cronjob
-                    description: Style is the style of the node scanning. The default
-                      is "cronjob" which will create a CronJob for the node scanning.
+                    description: Style specifies how node scanning is deployed. The
+                      default is "cronjob" which will create a CronJob for the node
+                      scanning.
                     enum:
                     - cronjob
                     - deployment
