--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -218,6 +218,10 @@ spec:
                       node scanning. The default is "60". Only applicable for Deployment
                       style.
                     type: integer
+                  priorityClassName:
+                    description: PriorityClassName specifies the name of the PriorityClass
+                      for the node scanning workloads.
+                    type: string
                   resources:
                     description: ResourceRequirements describes the compute resource
                       requirements.
