--- a/charts/mondoo-operator/templates/mondoooperatorconfig-crd.yaml
+++ b/charts/mondoo-operator/templates/mondoooperatorconfig-crd.yaml
@@ -3,7 +3,7 @@ kind: CustomResourceDefinition
 metadata:
   name: mondoooperatorconfigs.k8s.mondoo.com
   annotations:
-    controller-gen.kubebuilder.io/version: v0.10.0
+    controller-gen.kubebuilder.io/version: v0.14.0
   labels:
   {{- include "mondoo-operator.labels" . | nindent 4 }}
 spec:
@@ -22,14 +22,19 @@ spec:
           API
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: |-
+              APIVersion defines the versioned schema of this representation of an object.
+              Servers should convert recognized schemas to the latest internal value, and
+              may reject unrecognized values.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: |-
+              Kind is a string value representing the REST resource this object represents.
+              Servers may infer this from the endpoint the client submits requests to.
+              Cannot be updated.
+              In CamelCase.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
             type: string
           metadata:
             type: object
@@ -49,8 +54,9 @@ spec:
                   resourceLabels:
                     additionalProperties:
                       type: string
-                    description: ResourceLabels allows providing a list of extra labels
-                      to apply to the metrics-related resources (eg. ServiceMonitor)
+                    description: |-
+                      ResourceLabels allows providing a list of extra labels to apply to the metrics-related
+                      resources (eg. ServiceMonitor)
                     type: object
                 type: object
               skipContainerResolution:
