--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -274,7 +274,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        k8s-version: [v1.26.12, v1.27.9, v1.28.5, v1.29.0]
+        k8s-version: [v1.28.9, v1.29.4, v1.30.0]
 
     steps:
       - uses: actions/checkout@v4
