--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -99,7 +99,7 @@ spec:
                 properties:
                   enable:
                     type: boolean
-                  envVar:
+                  env:
                     description: |-
                       Env allows setting extra environment variables for the node scanner. If the operator sets already an env
                       variable with the same name, the value specified here will override it.
@@ -343,7 +343,7 @@ spec:
                 properties:
                   enable:
                     type: boolean
-                  envVar:
+                  env:
                     description: |-
                       Env allows setting extra environment variables for the node scanner. If the operator sets already an env
                       variable with the same name, the value specified here will override it.
