--- a/charts/mondoo-operator/templates/mondoooperatorconfig-crd.yaml
+++ b/charts/mondoo-operator/templates/mondoooperatorconfig-crd.yaml
@@ -41,6 +41,9 @@ spec:
           spec:
             description: MondooOperatorConfigSpec defines the desired state of MondooOperatorConfig
             properties:
+              containerProxy:
+                description: ContainerProxy specifies a proxy to use for container images.
+                type: string
               httpProxy:
                 description: HttpProxy specifies a proxy to use for HTTP requests to
                   the Mondoo Platform.
