--- a/charts/mondoo-operator/templates/manager-rbac.yaml
+++ b/charts/mondoo-operator/templates/manager-rbac.yaml
@@ -22,16 +22,6 @@ rules:
   resources:
   - daemonsets
   - deployments
-  - replicasets
-  - statefulsets
-  verbs:
-  - get
-  - list
-  - watch
-- apiGroups:
-  - apps
-  resources:
-  - deployments
   verbs:
   - create
   - delete
@@ -39,6 +29,17 @@ rules:
   - list
   - patch
   - update
+  - watch
+- apiGroups:
+  - apps
+  resources:
+  - daemonsets
+  - deployments
+  - replicasets
+  - statefulsets
+  verbs:
+  - get
+  - list
   - watch
 - apiGroups:
   - batch
