--- a/.github/workflows/cnspec.yaml
+++ b/.github/workflows/cnspec.yaml
@@ -12,7 +12,8 @@ on:
         default: 'latest'
 
 env:
-  IMAGE: ghcr.io/mondoohq/mondoo-operator/cnspec
+  GHCR_IMAGE: ghcr.io/mondoohq/mondoo-operator/cnspec
+  GCP_IMAGE: us-docker.pkg.dev/mondoohq/release/mondoo-operator-cnspec
 
 jobs:
   build-cnspec:
@@ -55,11 +56,27 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Authenticate with Google Cloud
+        uses: "google-github-actions/auth@v2"
+        with:
+          credentials_json: "${{ secrets.GCP_ARTIFACT_REGISTRY_SA }}"
+
+      - name: "Set up Cloud SDK"
+        uses: "google-github-actions/setup-gcloud@v2"
+
+      - name: Docker Login (GCR)
+        run: |
+          gcloud auth configure-docker us-docker.pkg.dev
+      - name: "Setup Docker Buildx"
+        uses: docker/setup-buildx-action@v3
+
       - name: Extract Docker metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.IMAGE }}
+          images: |
+            ${{ env.GHCR_IMAGE }}
+            ${{ env.GCP_IMAGE }}
           tags: |
             type=semver,pattern={{version}},value=${{ env.VERSION }}
             type=semver,pattern={{major}},value=${{ env.VERSION }}
