--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -14,6 +14,7 @@ on:
     tags: ["v*.*.*"]
 
 env:
+  REGISTRY: ghcr.io
   GHCR_IMAGE: ghcr.io/${{ github.repository }}
   GCP_IMAGE:  us-docker.pkg.dev/mondoohq/release/${{ github.repository }}
   RELEASE: ${{ github.ref_name }}
