🧹 update CI go and linter
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.54
+          version: latest
           args: --timeout=20m0s
 
   license-check:
