🐛 fix validation for daemonset node scans
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -538,6 +538,7 @@ spec:
                     enum:
                     - cronjob
                     - deployment
+                    - daemonset
                     type: string
                 type: object
               scanner:
