--- a/charts/mondoo-operator/templates/mondooauditconfig-crd.yaml
+++ b/charts/mondoo-operator/templates/mondooauditconfig-crd.yaml
@@ -545,6 +545,7 @@ spec:
                     enum:
                     - cronjob
                     - deployment
+                    - daemonset
                     type: string
                 type: object
               scanner:
