--- a/.github/workflows/link-check.yaml
+++ b/.github/workflows/link-check.yaml
@@ -14,6 +14,7 @@
           - name: Check out code
             uses: actions/checkout@v4
           - name: markdown-link-check
-            uses: gaurav-nelson/github-action-markdown-link-check@v1
+            uses: tcort/github-action-markdown-link-check@v1
             with:
               use-verbose-mode: "yes"
+              config-file: 'mlc_config.json'
