--- a/.github/workflows/link-check.yaml
+++ b/.github/workflows/link-check.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v5
       - name: markdown-link-check
-        uses: gaurav-nelson/github-action-markdown-link-check@v1
+        uses: gaurav-nelson/github-action-markdown-link-check@5c5dfc0ac2e225883c0e5f03a85311ec2830d368
         with:
           use-verbose-mode: "yes"
           config-file: ".github/actions/link-check/config.json"
